@@ -60,13 +60,13 @@
 
 
 # MCU name
-MCU = at90usb647
+MCU = atmega32u4
 
 
 # Target board (see library "Board Types" documentation, NONE for projects not requiring
 # LUFA board drivers). If USER is selected, put custom board drivers in a directory called 
 # "Board" inside the application directory.
-BOARD  = USBKEY
+BOARD  = BENITO
 
 
 # Processor frequency.
