@@ -202,7 +202,7 @@ CDEFS += -DAUX_LINE_PIN=PINB
 CDEFS += -DAUX_LINE_DDR=DDRB
 CDEFS += -DAUX_LINE_MASK="(1 << 4)"
 CDEFS += -DVTARGET_ADC_CHANNEL=2
-#CDEFS += -DLIBUSB_FILTERDRV_COMPAT
+#CDEFS += -DLIBUSB_DRIVER_COMPAT
 
 
 # Place -D or -U options here for ASM sources
